--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Linespace Software - Reliable solutions for complex organization challenges.</title>
+  <title>Reliable solutions for complex organization challenges.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -35,7 +35,8 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 672-336-1171</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7683-6426</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7943-5667</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -56,10 +57,20 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="pages/domain_names.html">Domain Names</a></li>
+              <li><a href="pages/web_hosting.html">Web Hosting</a></li>
+              <li><a href="pages/business_grade_email.html">Business-Grade Email</a></li>
+              <li><a href="pages/website_builder.html">Website Builder</a></li>
+              <li><a href="pages/ssl_certificates.html">SSL Certificates</a></li>
+              <li><a href="pages/servers.html">Servers</a></li>
+              <li><a href="pages/website_security.html">Website Security</a></li>
+              <li><a href="pages/managed_wordpress.html">Managed Wordpress</a></li>
+            </ul>
+          </li>
           <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -75,7 +86,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -87,7 +98,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>Linespace</span>.</h1>
+      <h1>Welcome to <span>Linespace</span></h1>
       <h2>Reliable solutions for complex organization challenges.</h2>
       <div class="d-flex">
         <a href="#contact" class="btn-get-started scrollto">Contact us</a>
@@ -155,12 +166,11 @@
         <div class="section-title">
           <h2>About</h2>
           <h3>Find Out More <span>About Us</span></h3>
-          <p>We offer reliable solutions for complex organization challenges</p>
         </div>
         <div class="section-about-us p">
           <p>We specialize in delivering innovative software solutions that drive business success. With a deep understanding of the evolving technological landscape, our mission is to provide cutting-edge software services tailored to meet the unique needs of our clients, from startups to global enterprises.</p>
           <p>Our extensive range of software solutions includes web hosting, robust security features, intuitive website builders, business-grade email, SSL certificates, and comprehensive server management. We leverage the latest technologies to ensure our software is scalable, reliable, and secure, enabling businesses to operate efficiently and effectively in the digital age.</p>
-          <p>What distinguishes us is our unwavering commitment to quality and customer satisfaction. Our team of expert developers and IT professionals work around the clock to provide exceptional support and ensure that our software solutions deliver optimal performance. We prioritize security, performance, and user experience, ensuring that our clients can focus on their core business objectives without worrying about their IT infrastructure.
+          <p>What distinguishes us is our unwavering commitment to quality and customer satisfaction. We work around the clock to provide exceptional support and ensure that our software solutions deliver optimal performance. We prioritize security, performance, and user experience, ensuring that our clients can focus on their core business objectives without worrying about their IT infrastructure.
           </p>
           <p>We believe in forging strong, lasting partnerships with our clients, offering personalized service and solutions that adapt to their growing needs. Trust us to be your dependable partner in navigating the complexities of the digital world, delivering the software and support you need to succeed.</p>
 
@@ -357,39 +367,39 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="">Domain Names</a></h4>
-              <p>Hundreds of new domains, including .ninja, .xyz and more.</p>
+              <h4><a href="pages/domain_names.html">Domain Names</a></h4>
+              <p>Hundreds of new domains, including .com, .org, .net, and more.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Web Hosting</a></h4>
-              <p>Hosting that's lightning-fast and packed with features./p>
+              <h4><a href="pages/web_hosting.html">Web Hosting</a></h4>
+              <p>Professional hosting that's lightning-fast and packed with features.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Business-Grade Email</a></h4>
-              <p>Our worry-free email solution.Our worry-free email solution. Our worry-free email solution.</p>
+              <h4><a href="pages/business_grade_email.html">Business-Grade Email</a></h4>
+              <p>Our worry-free email solution to help your business have a professional look.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
-              <h4><a href="">Website Builder</a></h4>
-              <p>A DIY solution for you or your business.A DIY solution for you or your business.A DIY solution for you or your business.</p>
+              <h4><a href="pages/website_builder.html">Website Builder</a></h4>
+              <p>A DIY solution for you or your business. A DIY solution for you or your business.A DIY solution for you or your business.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">SSL Certificates</a></h4>
+              <h4><a href="pages/ssl_certificates.html">SSL Certificates</a></h4>
               <p>Keep your website safe, sound and 100% secure with our strongest encryption out there.</p>
             </div>
           </div>
@@ -397,7 +407,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Servers</a></h4>
+              <h4><a href="pages/servers.html">Servers</a></h4>
               <p>Whether it's dedicated or virtual private, we have your server options covered.</p>
             </div>
           </div>
@@ -405,7 +415,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Website Security Powered by Sucuri</a></h4>
+              <h4><a href="pages/website_security.html">Website Security Powered by Sucuri</a></h4>
               <p>Protection from malware, hacking and more.</p>
             </div>
           </div>
@@ -413,7 +423,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-arch"></i></div>
-              <h4><a href="">Managed WordPress</a></h4>
+              <h4><a href="pages/managed_wordpress.html">Managed WordPress</a></h4>
               <p>Hosting made specifically for WordPress, minus the stress.</p>
             </div>
           </div>
@@ -639,7 +649,7 @@
     </section>End Team Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing">
+    <!-- <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -735,7 +745,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
     <!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
@@ -765,7 +775,7 @@
                 <div data-bs-toggle="collapse" href="#faq2" class="collapsed question">Why do I need a professional email? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                   <p>
-                    There are a lot of reasons to switch from your free email to a domain-based email, but here are the top 3, customers are much more likely to trust a professional address like lily@lilysbikes.com than lilysbikestexas84@notmail.com, and personalized email addresses promote your business more effectively. Every time you send an email, you are giving your web address to customers and prospects, encouraging them to visit your website, Personalized email addresses promote your business more effectively. Every time you send an email, you are giving your web address to customers and prospects, encouraging them to visit your website.
+                    There are a lot of reasons to switch from your free email to a domain-based email, but here are the top 3, customers are much more likely to trust a professional address like lily@lilysbikes.com than lilysbikestexas84@notmail.com, and personalized email addresses promote your business more effectively. Every time you send an email, you are giving your web address to customers and prospects, encouraging them to visit your website.
                   </p>
                 </div>
               </li>
@@ -844,7 +854,7 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+1 672-336-1171</p>
+              <p>+268 7683-6426 | +268 7943-5667</p>
             </div>
           </div>
 
@@ -912,7 +922,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span>.</span></h3>
             <p>
-              <strong>Phone:</strong>+1 672-336-1171<br>
+              <strong>Phone:</strong> +268 7683-6426 | +268 7943-5667<br>
               <strong>Email:</strong> info@linespacesoftware.com<br>
             </p>
           </div>
@@ -923,21 +933,22 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/terms_of_service.html">Terms of service</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/privacy_policy.html">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Domain Names</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Business-Grade Email</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Builder</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Servers</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Website Security</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Managed WordPress</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/domain_names.html">Domain Names</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/web_hosting.html">Web Hosting</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/business_grade_email.html">Business-Grade Email</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/website_builder.html">Website Builder</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/ssl_certificates.html">SSL Certificates</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/servers.html">Servers</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/website_security.html">Website Security</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/managed_wordpress.html">Managed WordPress</a></li>
             </ul>
           </div>
 
@@ -945,7 +956,6 @@
             <h4>Our Social Networks</h4>
             <p>Reliable solutions for complex organization challenges.</p>
             <div class="social-links mt-3">
-              <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
               <a href="https://www.facebook.com/profile.php?id=61559912188835&mibextid=ZbWKwL" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/linespacesoftware/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="https://www.linkedin.com/company/103179901/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -958,7 +968,7 @@
 
     <div class="container py-4">
       <div class="copyright">
-        Copyright &copy; 2024 <span>Linespace Software</span>. All Rights Reserved.
+        Copyright &copy;2024 <span>Linespace Software</span>. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
