--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@linespacesoftware.com">info@linespacesoftware.com</a></i>
-        <!-- <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7683-6426</span></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268 7943-5667</span></i> -->
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>+268-3550-XXXX</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="https://github.com/linespacesoftware/" target="_blank" class="github"><i class="bx bxl-github"></i></a>
@@ -72,7 +71,7 @@
               <li><a href="pages/data_and_analytics.html">Data and Analytics</a></li>
               <li><a href="pages/digital_transformation.html">Digital Transformation</a></li>
               <li><a href="pages/cybersecurity.html">Cybersecurity</a></li> 
-              <li><a href="pages/exampad.html">Training and Support</a></li> 
+              <li><a href="pages/training_and_support.html">Training and Support</a></li> 
               <li><a href="pages/devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li> 
               <li><a href="pages/emerging.html">Emerging Technologies</a></li> 
             </ul>
@@ -935,7 +934,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h3>Linespace<span>.</span></h3>
             <p>
-              <strong>Phone:</strong> +268 7683-6426 | +268 7943-5667<br>
+              <strong>Call:</strong> +268-3550-XXXX<br>
               <strong>Email:</strong> info@linespacesoftware.com<br>
             </p>
           </div>
@@ -944,8 +943,10 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/about.html">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/products.html">Products</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/services.html">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/open_source.html">Open Source</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="pages/terms_of_service.html">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="pages/privacy_policy.html">Privacy policy</a></li>
             </ul>
@@ -954,14 +955,15 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/domain_names.html">Domain Names</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/web_hosting.html">Web Hosting</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/business_grade_email.html">Business-Grade Email</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/website_builder.html">Website Builder</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/ssl_certificates.html">SSL Certificates</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/servers.html">Servers</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/website_security.html">Website Security</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="pages/managed_wordpress.html">Managed WordPress</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/custom_software.html">Custom Software Development</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/consulting_and_advisory.html">Consulting and Advisory</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/managed_services.html">Managed Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/data_and_analytics.html">Data and Analytics</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/digital_transformation.html">Digital Transformation</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/cybersecurity.html">Cybersecurity</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/training_and_support.html">Training and Support</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/devops_and_cloud.html">DevOps and Cloud Infrastructure</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="pages/emerging.html">Emerging Technologies</a></li>
             </ul>
           </div>
 
